adds create/delete/read of current api session certificates
