# controller/internal/routes/current_api_session_api_model.go
@@ -17,8 +17,12 @@
 package routes
 
 import (
+	"fmt"
 	"github.com/go-openapi/strfmt"
+	"github.com/michaelquigley/pfxlog"
+	"github.com/openziti/edge/controller/env"
 	"github.com/openziti/edge/controller/model"
+	"github.com/openziti/edge/controller/response"
 	"github.com/openziti/edge/rest_model"
 	"github.com/openziti/fabric/controller/models"
 	"github.com/openziti/foundation/util/stringz"
@@ -26,6 +30,9 @@ import (
 )
 
 const EntityNameCurrentSession = "current-api-session"
+const EntityNameCurrentSessionCertificates = "certificates"
+
+var CurrentApiSessionCertificateLinkFactory *BasicLinkFactory = NewBasicLinkFactory(EntityNameCurrentSession + "/" + EntityNameCurrentSessionCertificates)
 
 var CurrentApiSessionLinkFactory LinksFactory = NewCurrentApiSessionLinkFactory()
 
@@ -64,4 +71,41 @@ func MapToCurrentApiSessionRestModel(s *model.ApiSession, sessionTimeout time.Du
 	}
 
 	return apiSession
+}
+
+func MapApiSessionCertificateToRestEntity(appEnv *env.AppEnv, context *response.RequestContext, e models.Entity) (interface{}, error) {
+	i, ok := e.(*model.ApiSessionCertificate)
+
+	if !ok {
+		err := fmt.Errorf("entity is not an API Session Certificate \"%s\"", e.GetId())
+		log := pfxlog.Logger()
+		log.Error(err)
+		return nil, err
+	}
+
+	al, err := MapApiSessionCertificateToRestModel(i)
+
+	if err != nil {
+		err := fmt.Errorf("could not convert to API entity \"%s\": %s", e.GetId(), err)
+		log := pfxlog.Logger()
+		log.Error(err)
+		return nil, err
+	}
+	return al, nil
+}
+
+func MapApiSessionCertificateToRestModel(i *model.ApiSessionCertificate) (*rest_model.CurrentAPISessionCertificateDetail, error) {
+
+	validFrom := strfmt.DateTime(*i.ValidAfter)
+	validTo := strfmt.DateTime(*i.ValidBefore)
+
+	ret := &rest_model.CurrentAPISessionCertificateDetail{
+		BaseEntity:  BaseEntityToRestModel(i, CurrentApiSessionCertificateLinkFactory),
+		Fingerprint: &i.Fingerprint,
+		Subject:     &i.Subject,
+		ValidFrom:   &validFrom,
+		ValidTo:     &validTo,
+	}
+
+	return ret, nil
 }
